# MLOps-Project

./: .gitignore  MLProject  README.md  pyproject.toml
.dvc/: config
.github/workflows/: test-code.yaml  validate-model.yaml
api/: app.py
configs/: README.md  api.yaml  cat_cols_unique.json  check_reproducibility.yaml  data.yaml  data_version.yaml  download_models.yaml  evaluate.yaml  experiment.yaml  label_out_names.yaml  main.yaml  ohe_out_names.yaml  sample_data.yaml  validate.yaml  validation_results.yaml
data/: .gitignore  README.md  transformed.csv.dvc  transformed_clean.csv.dvc
docs/: README.md
models/: README.md
notebooks/: 1_business_data_understanding.ipynb  PreliminaryDataUnderstanding.ipynb  PreliminaryModel.ipynb  README.md
outputs/: README.md
pipelines/: README.md  data_extract_dag.py  data_prepare.py  data_prepare_dag.py
reports/: README.md  validation_results_Embedder_NN_v27_vehicles_15.html  validation_results_Embedder_NN_v27_vehicles_15.json  validation_results_Embedder_NN_v28_vehicles_15.html  validation_results_Embedder_NN_v28_vehicles_15.json  validation_results_Embedder_NN_v28_vehicles_19.html  validation_results_Embedder_NN_v28_vehicles_19.json  validation_results_MLP_v51_vehicles_15.html  validation_results_MLP_v51_vehicles_15.json  validation_results_MLP_v52_vehicles_15.html  validation_results_MLP_v52_vehicles_15.json
results/: reproducibility_results_embedder_nn.txt  reproducibility_results_mlp.txt  reproducibility_results_resnet.txt
scripts/: README.md  create_symlink.sh  deploy_docker.sh  install.sh  install_requirements.sh  predict_samples.sh  test_data.sh
services/: README.md
sql/: README.md
src/: README.md  app.py  check_reproducibility.py  data.py  download_models.py  evaluate.py  main.py  model.py  models.py  nn.py  predict.py  transform.py  validate.py
tests/: README.md  test_load_features.py  test_preprocess_data.py  test_read_datastore.py  test_sample_data.py  test_validate_features.py  test_validate_initial_data.py
(+41702 files in other folders)
