[tool.poetry]
package-mode = false
name = "MLOps-Project"
version = "0.1.0"
description = "MLOps project"
authors = ["Palandr123 <palandr545@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dvc = "^3.51.2"
dvc-gdrive = "^3.0.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
